adjust padding to ensure the collapsed sidebar has same height

--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ i, span {
     color: #f9f9f9;
     background-color: transparent;
     text-align: left;
-    margin: 0.7em 0em 0em 0em;
+    margin: 0.7em 0em 0.2em 0em;
     padding: 0em;
     font-size: 3.5em;
 }
